--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=//AIzaSyD0X9CvAShfan0L5Lk16i3EgoHs-_JhBRY//"></script>
     <script>window.global = window;</script>
 
 </head>
