--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
 <!doctype html>
 <html>
 <head>
+  
+  <!-- <script src="app/login/jquery-1.10.2.js" type="text/javascript"></script>
+  <script src="app/login/bootstrap.js" type="text/javascript"></script>
+  <script src="app/login/login-register.js" type="text/javascript"></script> -->
     <base href='/'>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
